# SGpp_Example_Application_CMake

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
include/: example_function.hpp
src/: example_function.cpp  main_quadrature.cpp
